--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,6 @@
             background-size: cover;
             overflow: hidden;
         }
-
         footer {
             background-color: rgb(0, 0, 0);
             color: rgb(255, 255, 255);
@@ -59,15 +58,17 @@
       }
 
         .celular {
-        
-            width: 184px;
-            height: 370px;
-            margin: 159px;
-            padding: 10px;
+            backdrop-filter: blur(100px);
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            border: 3px solid rgba(255, 255, 255, 0.2);
+            width: 20%;
+            height: 55%;
+            margin: 10%;
+            padding: 10%;
             margin-bottom: 10px;
-            top: 150px;
+            top: 20%;
             right: 18%;
-            border: 4px solid rgb(0, 0, 0);
             border-radius: 35px;
             display: flex;
             flex-direction: column;
@@ -75,33 +76,15 @@
             justify-content: center;
             position: absolute;
             transform: translateY(-50%);
-
         }
-
-        .celular-camera-f {
-         position: absolute;
-         top: 10px;
-         left: 50%;
-         transform: translateX(-50%);
-         width: 60px;
-         height: 20px;
-        background-color: #000;
-        border-radius: 20px;
-        z-index: 2;
-        }
-
-        div img {
-            height: 100%;
-            margin-bottom: 0px;
-            width: 100%;
-            border-radius: 32px;
+        h2{
+            margin-bottom: 80%;
+            color:white;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             position: absolute;
-            object-fit: cover;
-            z-index: 0;
-            top: 0;
-            left: 0;
         }
-
         form input,
         form button {
             padding: 6px;
@@ -134,35 +117,36 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 30px;
-            gap: 8px;
-            margin-top: 200px;
+            margin-bottom: 100px;
+            gap: 10px;
+            margin-top: 100px;
             width: 70%;
         }
 
         #feedbackForm input,
         #feedbackForm button {
-            padding: 6px 8px;
-            border-radius: 15px;
+            padding: 8px 10px;
+            border-radius: 10px;
+            width: 200px;
             border: none;
-            font-size: 12px;
+            font-size: 18px;
             font-weight: bold;
-            background: white;
-            color: black;
+            backdrop-filter: blur(100px);
+            background: rgba(255, 255, 255, 0.644);
         }
 
         #feedbackForm input::placeholder {
-            color: gray;
+            color: rgb(0, 0, 0);
         }
 
         #feedbackForm button {
             cursor: pointer;
-            background-color: white;
+            background-color: rgb(255, 255, 255);
             transition: 0.3s ease;
         }
 
         #feedbackForm button:hover {
-            background-color: #ccc;
+            background-color: #78add1;
         }
 
         /*conteudo mobile, em baixo*/
@@ -195,28 +179,44 @@
         color: #3564aa;
       }
              .celular {
-                width: 45%;
-                height: 40%;
-                margin: 40%;
-                padding: 10%;
-                top: 15%;
-                right: -15%; 
-                border-radius: 35px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                position: fixed;
-                transform: translateY( -65%);
+            backdrop-filter: blur(100px);
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            border: 3px solid rgba(255, 255, 255, 0.2);
+            width: 50%;
+            height: 35%;
+            margin: 10%;
+            padding: 10%;
+            margin-bottom: 10px;
+            top: 25%;
+            right: 18%;
+            border-radius: 35px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            transform: translateY(-50%);
             }
+            h2{
+            margin-bottom: 100%;
+            font-size: 20px;
+            color:white;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+        }
             form input,
              form button {
-                padding: 10%;
-                border-radius: 5%;
+                padding: 8px 10px;
+                border-radius: 8px;
+                width: 1px;
                 border: none;
-                outline: none;
-                font-size: 12%;
-                width: 120%;
+                font-size: 10px;
+                font-weight: bold;
+                backdrop-filter: blur(100px);
+                background: rgba(255, 255, 255, 0.644);
             }
             form {
             position: fixed;
@@ -240,15 +240,14 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 125%;
+            margin-bottom: 20%;
             gap: 10px;
-            width: 70%;
         }
 
         #feedbackForm input,
         #feedbackForm button {
-            padding: 5% 2%;
-            border-radius: 15px;
+            padding: 8px 5px ;
+            border-radius: 10px;
             border: none;
             font-size: 100%;
             font-weight: bold;
@@ -290,9 +289,7 @@
     </div>
     <main class="conteiner">
     <div class="celular">
-    <div class="celular-camera-f"></div>
-        <img src="tech/celular-fundo.jfif" alt="celular">
-
+        <h2>Entrar Em Contato</h2>
     <form id="feedbackForm">
     <input 
             type="tel" 
