--- a/sobre.html
+++ b/sobre.html
@@ -144,7 +144,8 @@
         }
         nav ul li a {
           color: rgb(255, 255, 255);
-          margin: 15px;
+          margin: 5px;
+          padding: 2px;
           text-decoration: none;
         }
         nav ul li a:hover {
@@ -167,7 +168,7 @@
           position: fixed;
           align-items: center;
           top: 5%;
-          font-size: 150%;
+          font-size: 120%;
         }
         h2 {
           color: white;
