--- a/perguntas.html
+++ b/perguntas.html
@@ -200,7 +200,8 @@
         }
         nav ul li a {
           color: rgb(255, 255, 255);
-          margin: 15px;
+          margin: 5px;
+          padding: 2px;
           text-decoration: none;
         }
         nav ul li a:hover {
